--- a/index.html
+++ b/index.html
@@ -4,9 +4,103 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Panda Commerce</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+
+    <div class="container">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#"><img src="img/logo.png" alt=""></a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Features</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Pricing</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
+    </div>
+
+    <div class="container">
+        <div id="carouselExampleControls" class="carousel slide car-edit" data-bs-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active bg-clor pd">
+                <div class="row d-flex align-items-center">
+                    <div class="col-md-7">
+                        <h1>Full HD TV</h1>
+                        <p>Everything happens here. watch, ply, connect</p>
+                        <h2>$999</h2>
+                        <button class="buy-now-button btn">Buy Now</button>
+                    </div>
+                    <div class="col-md-5">
+                        <img src="img/banner-images/tv.png" alt="">
+                    </div>
+                </div>
+              </div>
+              <div class="carousel-item bg-clor pd">
+                <div class="row d-flex align-items-center">
+                    <div class="col-md-7">
+                        <h1>Headphones</h1>
+                        <p>Everything happens here. watch, ply, connect</p>
+                        <h2>$999</h2>
+                        <button class="buy-now-button btn">Buy Now</button>
+                    </div>
+                    <div class="col-md-5">
+                        <img src="img/banner-images/headphone.png" alt="">
+                    </div>
+                </div>
+              </div>
+              <div class="carousel-item bg-clor pd">
+                <div class="row d-flex align-items-center">
+                    <div class="col-md-7">
+                        <h1>X-Box</h1>
+                        <p>Everything happens here. watch, ply, connect</p>
+                        <h2>$999</h2>
+                        <button class="buy-now-button btn">Buy Now</button>
+                    </div>
+                    <div class="col-md-5">
+                        <img src="img/banner-images/xbox.png" alt="">
+                    </div>
+                </div>
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+        </div>
+
+
+
+
+
+
+
+<!-- JS LINK -->
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+      
 </body>
 </html>
