--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-    <div class="container">
+    <div class="container-main">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
               <a class="navbar-brand" href="#"><img src="img/logo.png" alt=""></a>
@@ -20,16 +20,16 @@
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link active" aria-current="page" href="#Home">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Features</a>
+                    <a class="nav-link" href="#Shoes">Shoes</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Pricing</a>
+                    <a class="nav-link" href="#Backpack">Backpack</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                    <a class="nav-link" href="#Subscribe">Subscribe</a>
                   </li>
                 </ul>
               </div>
@@ -37,16 +37,16 @@
           </nav>
     </div>
 
-    <div class="container">
+    <div class="container-main">
         <div id="carouselExampleControls" class="carousel slide car-edit" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active bg-clor pd">
                 <div class="row d-flex align-items-center">
                     <div class="col-md-7">
-                        <h1>Full HD TV</h1>
-                        <p>Everything happens here. watch, ply, connect</p>
+                        <h1>Mega LCD TV For Sports</h1>
+                        <p>This is the best tv in the world for people who just want to waste time in front of tv.</p>
                         <h2>$999</h2>
-                        <button class="buy-now-button btn">Buy Now</button>
+                        <button class="buy-now-button">Buy Now</button>
                     </div>
                     <div class="col-md-5">
                         <img src="img/banner-images/tv.png" alt="">
@@ -56,10 +56,10 @@
               <div class="carousel-item bg-clor pd">
                 <div class="row d-flex align-items-center">
                     <div class="col-md-7">
-                        <h1>Headphones</h1>
-                        <p>Everything happens here. watch, ply, connect</p>
+                        <h1>Cool Dude Headphone</h1>
+                        <p>This is the best headphone in the world for people who just want to waste time in front of funky world.</p>
                         <h2>$999</h2>
-                        <button class="buy-now-button btn">Buy Now</button>
+                        <button class="buy-now-button">Buy Now</button>
                     </div>
                     <div class="col-md-5">
                         <img src="img/banner-images/headphone.png" alt="">
@@ -69,10 +69,10 @@
               <div class="carousel-item bg-clor pd">
                 <div class="row d-flex align-items-center">
                     <div class="col-md-7">
-                        <h1>X-Box</h1>
-                        <p>Everything happens here. watch, ply, connect</p>
+                        <h1>X-Box for your living room</h1>
+                        <p>This is the best x-box in the world for people who just want to waste time in front of fake sports.</p>
                         <h2>$999</h2>
-                        <button class="buy-now-button btn">Buy Now</button>
+                        <button class="buy-now-button">Buy Now</button>
                     </div>
                     <div class="col-md-5">
                         <img src="img/banner-images/xbox.png" alt="">
@@ -91,6 +91,31 @@
           </div>
         </div>
 
+
+        <div class="container-main">
+          <div class="row">
+
+            <div class="col-md-4">
+              <div class="cat-1 d-flex justify-content-between align-items-center">
+                <h1>Watch</h1>
+                <img src="img/categories/watch.png" alt="" class="img-sm">
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="cat-2 d-flex justify-content-between align-items-center">
+                <h1>Bag</h1>
+                <img src="img/categories/bag.png" alt="" class="img-sm">
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="cat-3 d-flex justify-content-between align-items-center">
+                <h1>Shoes</h1>
+                <img src="img/categories/shoes.png" alt="" class="img-sm">
+              </div>
+            </div>
+
+          </div>
+        </div>
 
 
 
