--- a/index.html
+++ b/index.html
@@ -118,6 +118,90 @@
         </div>
 
 
+        <div class="container-main">
+          <h1>Shoes</h1>
+          <div class="row row-cols-1 row-cols-md-3 g-4">
+            <div class="col">
+              <div class="card h-100 card-edit">
+                <img src="img/shoes/shoe-1.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Supply 350</h5>
+                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional.</p>
+                  <h5>$120</h5>
+                  <button class="buy-now-button">Buy Now >></button>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card h-100 card-edit">
+                <img src="img/shoes/shoe-2.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Nike 360</h5>
+                  <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                  <h5>$320</h5>
+                  <button class="buy-now-button">Buy Now >></button>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card h-100 card-edit">
+                <img src="img/shoes/shoe-3.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Red Airmax</h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional.</p>
+                  <h5>$350</h5>
+                  <button class="buy-now-button">Buy Now >></button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+
+        <div class="container-main">
+          <h1>Backpack</h1>
+          <div class="row row-cols-1 row-cols-md-3 g-4">
+            <div class="col">
+              <div class="card h-100 card-edit">
+                <img src="img/bags/bag-1.png" class="card-img-top" alt="img/">
+                <div class="card-body">
+                  <h5 class="card-title">Red Laltu Bag</h5>
+                  <h5>$120</h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                </div>
+                <div class="card-footer">
+                  <button class="buy-now-button">Buy Now >></button>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card h-100 card-edit">
+                <img src="img/bags/bag-2.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Blue Niltu Bag</h5>
+                  <h5>$320</h5>
+                  <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                </div>
+                <div class="card-footer">
+                  <button class="buy-now-button">Buy Now >></button>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card h-100 card-edit">
+                <img src="img/bags/bag-3.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Black Kaltu Bag</h5>
+                  <h5>$169</h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                </div>
+                <div class="card-footer">
+                  <button class="buy-now-button">Buy Now >></button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
 
 
 
