--- a/index.html
+++ b/index.html
@@ -203,7 +203,20 @@
           </div>
         </div>
 
+        <div class="container-main">
+          <div class="submit bg-clor d-flex align-items-center justify-content-center">
+            <div class="div">
+              <h2>LET'S STAY IN TOUCH</h2>
+              <p class="text-muted">Get updates on sales, specials and more</p>
+              <input type="text" class="form-control">
+              <button class="buy-now-button">Submit</button>
+            </div>
+          </div>
+        </div>
 
+        <footer class="text-center">
+            <p>©2020. Panda Commerce. @Fahad Ahmad All rights reserved.</p>
+        </footer>
 
 
 <!-- JS LINK -->
